Fix font source declaration to use URL format for TT Contrast

--- a/global.css
+++ b/global.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "TT Contrast";
-  src: "public/TTContrast-Regular.woff2" format("woff2");
+  src: url("public/TTContrast-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
 }
